feat: add attendance service
